+ Добавил передачу хода
